<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity"
	android:gravity="center">
	
	<EditText
		android:layout_width="match_parent"
		android:layout_height="80sp"
		android:layout_marginStart="25sp"
		android:layout_marginEnd="25sp"
		android:background="@drawable/border"
		android:textSize="30sp"
		android:hint="@string/_0"
		android:inputType="none"
		android:autofillHints="@null"
		android:textAlignment="textEnd"
		android:paddingStart="10sp"
		android:paddingEnd="10sp"
		android:enabled="false"
		android:focusable="false"
		android:layout_marginTop="50sp"
		android:id="@+id/calculator_text_box"/>
	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_below="@id/calculator_text_box"
		android:gravity="center"
		android:layout_marginTop="15sp"
		android:id="@+id/first_row">
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/ac"
			android:textSize="25sp"
			android:id="@+id/ac_button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/backspace"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/ac_button"
			android:id="@+id/backspace_button"/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/percentage"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/backspace_button"
			android:id="@+id/percentage_button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/divide"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/percentage_button"/>
	</RelativeLayout>
	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_below="@id/first_row"
		android:gravity="center"
		android:layout_marginTop="15sp"
		android:id="@+id/second_row">
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_7"
			android:textSize="25sp"
			android:id="@+id/_7button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_8"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_7button"
			android:id="@+id/_8button"/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_9"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_8button"
			android:id="@+id/_9button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/multiply"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_9button"/>
	</RelativeLayout>
	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:gravity="center"
		android:layout_marginTop="15sp"
		android:id="@+id/third_row"
		android:layout_below="@id/second_row">
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_4"
			android:textSize="25sp"
			android:id="@+id/_4button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_5"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_4button"
			android:id="@+id/_5button"/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_6"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_5button"
			android:id="@+id/_6button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/subtract"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_6button"/>
	</RelativeLayout>
	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_below="@id/third_row"
		android:gravity="center"
		android:layout_marginTop="15sp"
		android:id="@+id/fourth_row">
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_1"
			android:textSize="25sp"
			android:id="@+id/_1button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_2"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_1button"
			android:id="@+id/_2button"/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_3"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_2button"
			android:id="@+id/_3button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/add"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_3button"/>
	</RelativeLayout>
	<RelativeLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_below="@id/fourth_row"
		android:gravity="center"
		android:layout_marginTop="15sp">
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/_0"
			android:textSize="25sp"
			android:id="@+id/_0button"
			/>
		<Button
			android:layout_height="55sp"
			android:layout_width="80sp"
			android:text="@string/decimal"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/_0button"
			android:id="@+id/decimal_button"/>
		
		<Button
			android:layout_height="55sp"
			android:layout_width="170sp"
			android:text="@string/equals"
			android:textSize="25sp"
			android:layout_marginStart="12sp"
			android:layout_toEndOf="@id/decimal_button"/>
	</RelativeLayout>
</RelativeLayout>